<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/snowboards">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/educational"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context="com.example.android.educational.MainActivity">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:paddingBottom="@dimen/padding3"
            android:paddingTop="@dimen/padding3"
            android:text="@string/question_1_text"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin1"
            android:layout_marginEnd="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin3"
            android:layout_marginRight="@dimen/margin9"
            android:layout_marginStart="@dimen/margin3"
            android:layout_marginTop="@dimen/margin1"
            android:paddingEnd="@dimen/padding2"
            android:paddingLeft="@dimen/padding2"
            android:paddingRight="@dimen/padding2"
            android:paddingStart="@dimen/padding2"
            android:scaleX="1.50"
            android:scaleY="1.50"
            android:text="@string/checkBox1"
            android:textColor="@color/text_color2" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin1"
            android:layout_marginEnd="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin3"
            android:layout_marginRight="@dimen/margin9"
            android:layout_marginStart="@dimen/margin3"
            android:layout_marginTop="@dimen/margin1"
            android:paddingEnd="@dimen/padding2"
            android:paddingLeft="@dimen/padding2"
            android:paddingRight="@dimen/padding2"
            android:paddingStart="@dimen/padding2"
            android:scaleX="1.50"
            android:scaleY="1.50"
            android:text="@string/checkBox2"
            android:textColor="@color/text_color2" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin1"
            android:layout_marginEnd="@dimen/margin10"
            android:layout_marginLeft="@dimen/margin3"
            android:layout_marginRight="@dimen/margin3"
            android:layout_marginStart="@dimen/margin3"
            android:layout_marginTop="@dimen/margin1"
            android:paddingEnd="@dimen/padding2"
            android:paddingLeft="@dimen/padding2"
            android:paddingRight="@dimen/padding2"
            android:paddingStart="@dimen/padding2"
            android:scaleX="1.50"
            android:scaleY="1.50"
            android:text="@string/checkBox3"
            android:textColor="@color/text_color2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:paddingBottom="@dimen/padding3"
            android:paddingTop="@dimen/padding3"
            android:text="@string/question_2_text"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingEnd="@dimen/padding5"
            android:paddingLeft="@dimen/padding5"
            android:paddingRight="@dimen/padding5"
            android:paddingStart="@dimen/padding5">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin1"
                android:layout_marginEnd="@dimen/margin2"
                android:layout_marginLeft="@dimen/margin4"
                android:layout_marginRight="@dimen/margin2"
                android:layout_marginStart="@dimen/margin4"
                android:layout_marginTop="@dimen/margin1"
                android:paddingEnd="@dimen/padding2"
                android:paddingLeft="@dimen/padding2"
                android:paddingRight="@dimen/padding2"
                android:paddingStart="@dimen/padding2"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/radioButton1"
                android:textColor="@color/text_color2" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin1"
                android:layout_marginEnd="@dimen/margin2"
                android:layout_marginLeft="@dimen/margin4"
                android:layout_marginRight="@dimen/margin2"
                android:layout_marginStart="@dimen/margin4"
                android:layout_marginTop="@dimen/margin1"
                android:paddingEnd="@dimen/padding2"
                android:paddingLeft="@dimen/padding2"
                android:paddingRight="@dimen/padding2"
                android:paddingStart="@dimen/padding2"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/radioButton2"
                android:textColor="@color/text_color2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin1"
                android:layout_marginEnd="@dimen/margin2"
                android:layout_marginLeft="@dimen/margin4"
                android:layout_marginRight="@dimen/margin2"
                android:layout_marginStart="@dimen/margin4"
                android:layout_marginTop="@dimen/margin1"
                android:paddingEnd="@dimen/padding2"
                android:paddingLeft="@dimen/padding2"
                android:paddingRight="@dimen/padding2"
                android:paddingStart="@dimen/padding2"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/radioButton3"
                android:textColor="@color/text_color2" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:paddingBottom="@dimen/padding3"
            android:paddingTop="@dimen/padding3"
            android:text="@string/question_3_text"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin1"
            android:layout_marginEnd="@dimen/padding2"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginRight="@dimen/padding2"
            android:layout_marginStart="@dimen/margin5"
            android:layout_marginTop="@dimen/margin1"
            android:paddingEnd="@dimen/padding2"
            android:paddingLeft="@dimen/padding2"
            android:paddingRight="@dimen/padding2"
            android:paddingStart="@dimen/padding2"
            android:scaleX="1.50"
            android:scaleY="1.50"
            android:text="@string/checkBox4"
            android:textColor="@color/text_color2" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin1"
            android:layout_marginEnd="@dimen/padding2"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginRight="@dimen/padding2"
            android:layout_marginStart="@dimen/margin5"
            android:layout_marginTop="@dimen/margin1"
            android:paddingEnd="@dimen/padding2"
            android:paddingLeft="@dimen/padding2"
            android:paddingRight="@dimen/padding2"
            android:paddingStart="@dimen/padding4"
            android:scaleX="1.50"
            android:scaleY="1.50"
            android:text="@string/checkBox5"
            android:textColor="@color/text_color2" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin1"
            android:layout_marginEnd="@dimen/padding2"
            android:layout_marginLeft="@dimen/margin5"
            android:layout_marginRight="@dimen/padding2"
            android:layout_marginStart="@dimen/margin5"
            android:layout_marginTop="@dimen/margin1"
            android:paddingEnd="@dimen/padding2"
            android:paddingLeft="@dimen/padding2"
            android:paddingRight="@dimen/padding2"
            android:paddingStart="@dimen/padding2"
            android:scaleX="1.50"
            android:scaleY="1.50"
            android:text="@string/checkBox6"
            android:textColor="@color/text_color2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin6"
            android:padding="@dimen/padding"
            android:text="@string/question_4_text"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:onClick="editText2"
            android:padding="@dimen/padding" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin6"
            android:padding="@dimen/padding"
            android:text="@string/question_5_text"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            tools:text="TextView" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="@dimen/padding5"
            android:paddingLeft="@dimen/padding5"
            android:paddingRight="@dimen/padding5"
            android:paddingStart="@dimen/padding5">

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin1"
                android:layout_marginEnd="@dimen/margin2"
                android:layout_marginLeft="@dimen/margin8"
                android:layout_marginRight="@dimen/margin8"
                android:layout_marginStart="@dimen/margin8"
                android:layout_marginTop="@dimen/margin1"
                android:paddingEnd="@dimen/padding4"
                android:paddingLeft="@dimen/padding4"
                android:paddingRight="@dimen/padding4"
                android:paddingStart="@dimen/padding4"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/radioButton4"
                android:textColor="@color/text_color2" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin1"
                android:layout_marginEnd="@dimen/margin2"
                android:layout_marginLeft="@dimen/margin11"
                android:layout_marginRight="@dimen/margin11"
                android:layout_marginStart="@dimen/margin11"
                android:layout_marginTop="@dimen/margin1"
                android:paddingEnd="@dimen/padding4"
                android:paddingLeft="@dimen/padding2"
                android:paddingRight="@dimen/padding4"
                android:paddingStart="@dimen/padding2"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/radioButton5"
                android:textColor="@color/text_color2" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin1"
                android:layout_marginEnd="@dimen/margin2"
                android:layout_marginLeft="@dimen/margin3"
                android:layout_marginRight="@dimen/margin3"
                android:layout_marginStart="@dimen/margin3"
                android:layout_marginTop="@dimen/margin1"
                android:paddingEnd="@dimen/padding4"
                android:paddingLeft="@dimen/padding4"
                android:paddingRight="@dimen/padding4"
                android:paddingStart="@dimen/padding4"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:text="@string/radioButton6"
                android:textColor="@color/text_color2" />
        </RadioGroup>

        <Button
            android:id="@+id/score_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin1"
            android:background="@color/colorPrimaryDark"
            android:paddingEnd="@dimen/padding7"
            android:paddingLeft="@dimen/padding7"
            android:paddingRight="@dimen/padding6"
            android:paddingStart="@dimen/padding6"
            android:text="@string/score"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="@dimen/layout_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding7"
            android:background="@color/colorPrimaryDark"
            android:onClick="reset"
            android:text="@string/reset"
            android:textColor="@color/text_color"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin1"
            android:layout_marginTop="@dimen/margin7"
            android:background="@color/colorPrimaryDark"
            android:onClick="submit"
            android:paddingBottom="@dimen/padding6"
            android:paddingTop="@dimen/padding6"
            android:text="@string/submit"
            android:textColor="@color/text_color"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>